--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="wrapper-top">
                 <h2 id="about">About</h2>
-                <p>小学生から大学まで野球をしていました。<br>早く自分で仕事がしたいです。<br>仕事ができる男の人ってかっこいいなって思います。</p>
+                <p>小学生から、大学まで野球をしていました。<br>早く自分で仕事がしたいです。<br>仕事ができる男の人ってかっこいいなって思います。</p>
             </div><!--wrapper-tpo-->
             <div class="wrapper-bottom">
                 <!-- <div class="wrapper-left"> -->
